# procrustus-indexer

./: .gitignore  .ignore  README.md  cmdi_indexer.py  create_store.py  create_switch_index.py  diplo_cmdi_indexer.py  diplo_indexer.py  docker-compose.yml  double_items.py  eco_cmdi_indexer.py  eco_indexer.py  index_reader.py  indexer.py  main.py  mmdc2json.py  pipeline-config.yaml  pyproject.toml  rdf.toml  read_and_index.py  read_index_json.py  requirements.txt  tei2es.py  xml.toml
data/TEI/: mapping_mmdc.xml
data/config/: config.json  config.json.bak
data/misc/: eco_shelfmarks.json  ga_indexes.json  ga_indexes_done.json
data/model_archive/: ecartico.json  ja_ik_wil.json
data/models/: ecartico.json  ondertrouwregisters.json  stcn.json
data/xml/: 1.xml  10.xml  2.xml  3.xml  4.xml  5.xml  6.xml  7.xml  8.xml  9.xml
fields/: diplo.json
handlers/: postgres_handler.py  timbuctoo_handler.py
procrustus_indexer/: __init__.py  indexer.py  indexer_builder.py  pipeline.py
procrustus_indexer/extractors/: __init__.py  extractor.py  file_extractor.py
procrustus_indexer/loaders/: __init__.py  elasticsearch_loader.py  loader.py
procrustus_indexer/parsers/: __init__.py  json_parser.py  parser.py  rdf_parser.py  xml_parser.py
procrustus_indexer/transformers/: __init__.py  json_parser.py  transformer.py
queries/: timbuctoo_queries.py
tests/: test_json_parser.py
tests/test_files/: test-json.toml  test-jsonpath.toml
tests/test_files/json_files/: a.json  b.json  incomplete.json
